# echoes

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  security.py  vector.py
backend/app/db/: init.py
backend/app/models/: diary.py  user.py
backend/app/routers/: auth.py  diary.py
backend/app/schemas/: auth.py  diary.py
backend/app/services/: auth_service.py  diary_service.py  user_service.py
backend/src/backend/app/: main.py
backend/src/backend/app/core/: config.py  db.py  security.py  vector.py
backend/src/backend/app/models/: user.py
backend/src/backend/app/routers/: auth.py  diary.py
backend/src/backend/app/schemas/: diary.py
backend/src/backend/app/services/: auth_service.py  diary_service.py  user_service.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/diary/: DiaryContent.tsx
frontend/app/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/app/api/: diary.tsx
frontend/app/components/diary/: DiaryContent.tsx  DiaryHeader.tsx
frontend/app/components/layout/: Navbar.tsx  SidebarHeader.tsx
frontend/app/routes/: _index.tsx  diary.tsx  home.tsx  login.tsx
frontend/app/services/: auth.server.ts  diary.server.ts
frontend/app/types/: diary.ts  index.ts
frontend/app/utils/: session.server.ts
