[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
dev = "uvicorn backend.app.main:app --reload"